# TSAI_ERA_v4_cifar10_model_S7

./: .gitignore  CIFAR10_Dataset_Explorer.ipynb  CIFAR10_Training_Colab.ipynb  README.md  analyze_depthwise_separable.py  cifar10model_v0.py  data_setup.py  data_visual.py  demo_data_visual.py  main.py  pyproject.toml  receptive_field_calculator.py
data_visual_exp/: show_cifar10_images.py  test_data_visual.py
image_process_lib/: cifar10model_1710_v2_impro.py  cifar10model_v0_impro.py  image_process_README.md  img_pro_1710_v2.py
