[project]
name = "era-v4-cifar-10-model-v1-s7"
version = "0.1.0"
description = "CIFAR-10 CNN Model Training with PyTorch - ERA v4 Assignment S7"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core PyTorch and Computer Vision
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchsummary>=1.5.1",
    # Data Science and Visualization
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    # Image Processing and Augmentation
    "pillow>=9.0.0",
    "albumentations>=1.3.0",
    # Progress Bars and Utilities
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

analysis = [
    # For advanced data analysis
    "seaborn>=0.11.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
]

notebook = [
    # For Jupyter Notebook Support
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main", 
    "data_setup", 
    "data_visual", 
    "cifar10model_v0", 
    "train_test", 
    "logger_setup", 
    "summarizer",
    "test_data_visual"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
